[package]
name = "run_motor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.2"
drobo_interfaces = { path = "/tmp/2023_main/drobo_interfaces" }

[package.metadata.ros]
msg = ["drobo_interfaces"]
msg_dir = "/tmp/2023_main/"
safe_drive_version = "0.2"